fixed bug on mobile menu

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -270,13 +270,17 @@ p.body-4 {
         &-mobile {
             height: 100vh;
             width: 100vw;
-            background: blue;
             z-index: 95;
             position: fixed;
             top: 0;
             right: 0;
-            background: var(--gray-90010, rgba(17, 24, 39, 0.1));
-            backdrop-filter: blur(4px);
+            transition: all 0.5s ease-in-out;
+            
+            &.activeBckgd {
+                background: var(--gray-90010, rgba(17, 24, 39, 0.1));
+                backdrop-filter: blur(4px);
+                transition: all 0.5s ease-in-out;
+            }
 
             &-container {
                 display: flex;
@@ -379,9 +383,11 @@ p.body-4 {
                 width: 100%;
                 height: 2px;
                 background: #111827;
+                transition: all 0.3s ease-in-out;
 
                 &.animationOpenTop {
                     animation: translateYTop 0.3s linear forwards, rotateTop 0.3s 0.3s linear forwards;
+                    transition: all 0.3s ease-in-out;
                 }
             }
             .close-bottomLine {
@@ -390,9 +396,11 @@ p.body-4 {
                 width: 100%;
                 height: 2px;
                 background: #111827; 
+                transition: all 0.3s ease-in-out;
 
                 &.animationOpenBottom {
                     animation: translateYBottom 0.3s linear forwards, rotateBottom 0.3s 0.3s linear forwards;
+                    transition: all 0.3s ease-in-out;
                 }
             }
             @keyframes translateYTop {
@@ -1209,7 +1217,8 @@ p.body-4 {
                         font-weight: 600;
                         line-height: 40px; 
                         letter-spacing: -0.72px;
-
+                        text-decoration: none !important;
+                        
                         @media (max-width: 768px) {
                             color: var(--gray-900, #111827);
                             text-align: center;
